--- a/Projet/SignUp.html
+++ b/Projet/SignUp.html
@@ -9,22 +9,30 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Style.css">
-        <title>Connexion</title>
+        <title>Creer un compte</title>
     </head>
 
     <body>
             <div class="connexion">
-                <h1>Connexion</h1>
+                <h1>Creer un compte</h1>
                 <div class="champ">
-                    <h3>Nom de compte / Adresse email</h3>
-                    <input type = "text" name = "login" id = "login" class="texte">
+                    <h3>Nom</h3>
+                    <input type = "text" name = "nom" id = "nom" class="texte">
+                </div>
+                <div class="champ">
+                    <h3>Prenom</h3>
+                    <input type = "text" name = "prenom" id = "prenom" class="texte">
+                </div>
+                <div class="champ">
+                    <h3>Adresse mail</h3>
+                    <input type = "text" name = "mail" id = "mail" class="texte">
                 </div>
                 <div class="champ">
                     <h3>Mot de passe</h3>
-                    <input type = "text" name = "MDP" id = "MDP" class="texte">
+                    <input type = "text" name = "mdp" id = "mdp" class="texte">
                 </div>
-                <button type = "button" id = "test">Connexion</button>
-                <a href= "SignUp.html">Je n'ai pas de compte</a>
+                <button type = "button" id = "test">Creer compte</button>
+                <a href= "Login.html">J'ai déjà un compte</a>
             </div>
         <script src = "main.js"></script>
     </body>
