--- a/Projet/Login.html
+++ b/Projet/Login.html
@@ -24,7 +24,7 @@
                     <input type = "text" name = "MDP" id = "MDP" class="texte">
                 </div>
                 <button type = "button" id = "test">Connexion</button>
-                <a href= "SignUp.html">Je n'ai pas de compte</a>
+                <a class ="lien" href= "SignUp.html">Je n'ai pas de compte</a>
             </div>
         <script src = "main.js"></script>
     </body>
