--- a/Projet/SignUp.html
+++ b/Projet/SignUp.html
@@ -32,7 +32,7 @@
                     <input type = "text" name = "mdp" id = "mdp" class="texte">
                 </div>
                 <button type = "button" id = "test">Creer compte</button>
-                <a href= "Login.html">J'ai déjà un compte</a>
+                <a class = "lien" href= "Login.html">J'ai déjà un compte</a>
             </div>
         <script src = "main.js"></script>
     </body>
