--- a/Projet/index.html
+++ b/Projet/index.html
@@ -24,10 +24,27 @@
         </div>
 
         <div class="toolbar">
+            <img src = "restaurant.png" id = "restaurant" title='Restaurant'>
             <button type = "button"  id = "developper">▽</button>
+        </div>
+
+        <div id="form">
+            <h1>Ajouter un point</h1>
+            <h2 id = "croix">X</h2>
+            <div class="champ">
+                <h3>Nom</h3>
+                <input type = "text" name = "nom" id = "nom" class="texte">
+            </div>
+            <div class="champ">
+                <h3>Avis</h3>
+                <textarea name = "avis" class = "texte" id = "avis"></textarea>
+            </div>
+            <button id = "valider" type = "button" id = "test">Valider</button>
         </div>
     
         <div id="map"></div>
+
+        <div id="ombre"></div>
         
 
         <script src = "main.js"></script>
