--- a/Projet/SignUp.html
+++ b/Projet/SignUp.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+        <form action = "SignUp.php" method = "POST">
             <div class="connexion">
                 <h1>Creer un compte</h1>
                 <div class="champ">
@@ -34,6 +35,7 @@
                 <button type = "button" id = "test">Creer compte</button>
                 <a class = "lien" href= "Login.html">J'ai déjà un compte</a>
             </div>
+        </form>
         <script src = "main.js"></script>
     </body>
 </html>
