--- a/Projet/index.html
+++ b/Projet/index.html
@@ -18,8 +18,8 @@
     <body>
         <div class="navbar">
             <ul class = "menu">
-                <a href = "Login.html"><li id = "Connexion">Connexion</li></a>
-                <a href = "SignUp.html"><li id = "CreerCompte">Creer un compte</li></a>
+                <a href = "Login.php"><li id = "Connexion">Connexion</li></a>
+                <a href = "SignUp.php"><li id = "CreerCompte">Creer un compte</li></a>
             </ul>
         </div>
 
@@ -27,8 +27,7 @@
             <img src = "magasin.png" id = "magasin" title = "Magasin" class = "icones">
             <img src = "monument.png" id = "monument" title = "Monument" class = "icones">
             <img src = "restaurant.png" id = "restaurant" title='Restaurant' class = "icones">
-            <img src = "Croix.png" id = "suppr" title = "Supprimer" class = "icones">
-            <button type = "button"  id = "developper">▽</button>
+            <img src = "theatre.png" id = "theatre" title = "Theatre" class = "icones">
         </div>
 
         <div id="form">
